# useful_pre_commit_hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: check_exec_eval.py  check_parameters_typing.py  check_requirements_versions.py
