[metadata]
name = useful_pre_commit_hooks
version = 1.0.2
description = Useful pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
author = Marcin Bazydło
author_email = marcin.p.bazydlo@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7

[options.entry_points]
console_scripts =
    check-parameters-typing= pre_commit_hooks.check_parameters_typing:main

[bdist_wheel]
universal = True
